<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_weather"
    tools:context=".WeatherActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weatherIconImageView"
        android:layout_alignParentTop="true"
        android:src="@drawable/icon_na"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/condition_icon" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Temperature"
        android:id="@+id/temperatureTextView"
        android:layout_below="@+id/weatherIconImageView"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:typeface="serif" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Condition"
        android:id="@+id/conditionTextView"
        android:layout_below="@+id/temperatureTextView"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Location"
        android:id="@+id/locationTextView"
        android:layout_below="@+id/conditionTextView"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forecastListView"
        android:layout_below="@+id/locationTextView"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Refresh"
            android:id="@+id/refreshWeatherButton"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showMap"
            android:id="@+id/showMapButton"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Assist"
            android:id="@+id/assistButton"/>
    </LinearLayout>

</RelativeLayout>
